--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,16 +7,12 @@ main:
     url: "/#-news"
 
   - title: "Publications"
-    url: "/#-publications"
+    url: "/publications/"
 
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  - title: "CV"
+    url: "/cv/"
 
-  - title: "Educations"
-    url: "/#-educations"
+  - title: "Teaching"
+    url: "/teaching/"
 
-  - title: "Invited Talks"
-    url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
