--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Changyuan Zhao"
-description              : 
+description              : "'Research is what I'm doing when I don't know what I'm doing.' – Wernher von Braun"
 repository               : "ChangyuanZhao/zhaocy.github.io"
 google_scholar_stats_use_cdn : true
 
