--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ kramdown:
 defaults:
   # _pages
   - scope:
-      path: ""
+      path: "_pages"
       type: pages
     values:
       layout: default
