--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Changyuan Zhao"
+title                    : "Changyuan Zhao (赵常源)"
 description              : "'Research is what I'm doing when I don't know what I'm doing.' – Wernher von Braun"
 repository               : "ChangyuanZhao/zhaocy.github.io"
 google_scholar_stats_use_cdn : true
