--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Changyuan Zhao <br>  赵常源"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/NEW_page.png"
   bio              : "College of Computing and Data Science, Nanyang Technological University"
   location         : "Singapore"
   employer         :
