--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -1,23 +1,17 @@
 # _data/travel.yml
 cities:
-  - city: 北京
+  - city: Beijing
     lat: 39.9042
     lon: 116.4074
     visits:
-      - 2023-12-15
-      - 2023-10-01
-      - 2023-07-20
-      - 2022-05-10
-      - 2022-01-25
+      - 2025-02-28
       
-  - city: 上海
-    lat: 31.2304
-    lon: 121.4737
+  - city: Dalian
+    lat: 38.9140
+    lon: 121.6147
     visits:
-      - 2024-01-05
-      - 2023-09-10
-      - 2023-04-15
-      
+      - 2025-03-02
+
   - city: 东京
     lat: 35.6762
     lon: 139.6503
