--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,79 +1,31 @@
-- title: "Cross-Modal Generative Semantic Communications for Mobile AIGC: Joint Semantic Encoding and Prompt Engineering"
-  url: "https://doi.org/10.1109/TMC.2024.1234567"   # ← 添加链接
+- title: "Generative AI for secure physical layer communications: A survey"
+  url: "https://ieeexplore.ieee.org/document/10623395"
+  type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
   year: 2024
-  venue: "IEEE Transactions on Mobile Computing"
-  short: "TMC"
+  venue: "IEEE Transactions on Cognitive Communications and Networking"
+  short: "TCCN"
   authors:
-    - Yinqiu Liu
-    - Hongyang Du
-    - Dusit Niyato
     - Changyuan Zhao
-    - Xiang Li
-    - Yuchen Zhang
-    - Yifan Chen
-    - Another Author
-    - Extra Author
-
-
-- title: "Another Paper Title"
-  year: 2023
-  venue: "IEEE Journal on Selected Areas in Communications"
-  short: "JSAC"
-  authors:
-    - First Author
-    - Second Author
-    - Third Author
-
-- title: "Cross-Modal 1231Generative Semantic Communications for Mobile AIGC"
-  url: "https://doi.org/10.1109/TMC.2024.1234567"
-  code: "https://github.com/your/code-repo"   # ← 添加 code 字段（可选）
-  year: 2024
-  venue: "IEEE Transactions on Mobile Computing"
-  short: "TMC"
-  authors:
-    - Yinqiu Liu
     - Hongyang Du
     - Dusit Niyato
-    - ...
+    - Jiawen Kang
+    - Zehui Xiong
+    - Dong In Kim
+    - Xuemin Shen
+    - Khaled B Letaief
 
-
-- title: "Cross-Modal Generative Semantic Communications for Mobile AIGC"
-  url: "https://doi.org/10.1109/TMC.2024.1234567"
-  code: "https://github.com/your/code-repo"
+- title: "Enhancing Physical Layer Communication Security through Generative AI with Mixture of Experts"
+  url: "https://ieeexplore.ieee.org/document/10839236"
   type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
-  year: 2024
-  venue: "IEEE Transactions on Mobile Computing"
-  short: "TMC"
+  year: 2025
+  venue: "IEEE Wireless Communications"
+  short: "WCM"
   authors:
-    - Yinqiu Liu
+    - Changyuan Zhao
     - Hongyang Du
     - Dusit Niyato
-    - ...
-
-- title: "Cross-Modal Generative Semantic Communications for Mobile AIGC"
-  url: "https://doi.org/10.1109/TMC.2024.1234567"
-  code: "https://github.com/your/code-repo"
-  type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
-  year: 2023
-  venue: "IEEE Transactions on Mobile Computing"
-  short: "TMC"
-  authors:
-    - Yinqiu Liu
-    - Hongyang Du
-    - Dusit Niyato
-    - ...
-
-
-- title: "Cross-Modal Generative Semantic Communications for Mobile AIGC"
-  url: "https://doi.org/10.1109/TMC.2024.1234567"
-  code: "https://github.com/your/code-repo"
-  type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
-  year: 2021
-  venue: "IEEE Transactions on Mobile Computing"
-  short: "TMC"
-  authors:
-    - Yinqiu Liu
-    - Hongyang Du
-    - Dusit Niyato
-    - ...
-
+    - Jiawen Kang
+    - Zehui Xiong
+    - Dong In Kim
+    - Xuemin Shen
+    - Khaled B Letaief
