--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Changyuan Zhao (赵常源)"
 description              : "'Research is what I'm doing when I don't know what I'm doing.' – Wernher von Braun"
-repository               : "ChangyuanZhao/zhaocy.github.io"
+repository               : "ChangyuanZhao/ChangyuanZhao.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
