--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ title                    : "Changyuan Zhao (赵常源)"
 description              : "'Research is what I'm doing when I don't know what I'm doing.' – Wernher von Braun"
 repository               : "ChangyuanZhao/ChangyuanZhao.github.io"
 google_scholar_stats_use_cdn : true
+Badgen_used              : true
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
