--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title                    : "Changyuan Zhao (赵常源)"
 description              : "'Research is what I'm doing when I don't know what I'm doing.' – Wernher von Braun"
 repository               : "ChangyuanZhao/ChangyuanZhao.github.io"
-google_scholar_stats_use_cdn : true
+google_scholar_stats_use_cdn : false
 Badgen_used              : true
 
 # google analytics
