--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -28,6 +28,7 @@ cities:
     lat: 1.3521
     lon: 103.8198
     visits:
+      - 2025-04-21
       - 2025-03-14
       - 2025-01-10
       - 2024-12-20
@@ -49,6 +50,18 @@ cities:
     lon: 108.9398
     visits:
       - 2024-12-29
+
+  - city: Chengdu
+    lat: 30.5728
+    lon: 104.0668
+    visits:
+      - 2025-04-15
+  
+  - city: Chongqing
+    lat: 29.5630
+    lon: 106.5516
+    visits:
+      - 2025-04-18
 
 
 
