--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -29,5 +29,5 @@ jobs:
         git push -f origin main:google-scholar-stats
       env: 
         GOOGLE_SCHOLAR_ID: ${{ secrets.GOOGLE_SCHOLAR_ID }}
-        SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}”
+        SCRAPER_API_KEY: ${{ secrets.SCRAPER_API_KEY }}
         
