--- a/.github/workflows/google_scholar_crawler.yaml
+++ b/.github/workflows/google_scholar_crawler.yaml
@@ -17,7 +17,7 @@ jobs:
         cd ./google_scholar_crawler
         pip3 install -r requirements.txt
         echo "Start running main.py"
-        python3 main.py
+        python3 -v main.py
         cd ./results
         git init
         git config --global user.name "GitHub Actions"
