--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -62,6 +62,7 @@
     - Bai Xue
     
 - title: "Outer-approximating Controlled Reach-avoid Sets for Polynomial Systems"
+  url: "https://ieeexplore.ieee.org/document/9993391"
   type: "Conference"     # ✅ 可为 "Journal" 或 "Conference"
   year: 2022
   venue: "2022 IEEE 61st Conference on Decision and Control"
@@ -72,6 +73,7 @@
     - Bai Xue
     
 - title: "Supervised Score-Based Modeling by Gradient Boosting"
+  url: "https://dl.acm.org/doi/10.1609/aaai.v39i21.34437"
   type: "Conference"     # ✅ 可为 "Journal" 或 "Conference"
   year: 2025
   venue: "2025 The 39th Annual AAAI Conference on Artificial Intelligence"
