--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -99,3 +99,16 @@
     - Guangyuan Liu
     - Dusit Niyato
 
+
+- title: "Temporal Spectrum Cartography in Low-Altitude Economy Networks: A Generative AI Framework with Multi-Agent Learning"
+  # url: "https://dl.acm.org/doi/10.1609/aaai.v39i21.34437"
+  type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
+  year: 2025
+  venue: "IEEE Transactions on Mobile Computing"
+  short: "TMC"
+  authors:
+    - Changyuan Zhao
+    - Hongyang Du
+    - Guangyuan Liu
+    - Dusit Niyato
+
