--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -108,7 +108,11 @@
   short: "TMC"
   authors:
     - Changyuan Zhao
-    - Hongyang Du
-    - Guangyuan Liu
+    - Ruichen Zhang
+    - Jiacheng Wang
     - Dusit Niyato
-
+    - Geng Sun
+    - Hongyang Du
+    - Zan Li
+    - Abbas Jamalipour
+    - Dong In Kim
