--- a/_data/travel.yml
+++ b/_data/travel.yml
@@ -97,3 +97,11 @@ cities:
     lon: 112.9388
     visits:
       - 2025-09-24
+
+
+  - city: Nanjing
+    lat: 32.0603
+    lon: 118.7969
+    visits:
+      - 2026-01-07
+
