--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -118,7 +118,7 @@
     - Dong In Kim
     
 - title: "Edge General Intelligence Through World Models, Large Language Models, and Agentic AI: Fundamentals, Solutions, and Challenges"
-  # url: "https://ieeexplore.ieee.org/document/11311556"
+  url: "https://ieeexplore.ieee.org/document/11366905"
   type: "Journal"     # ✅ 可为 "Journal" 或 "Conference"
   year: 2026
   venue: "IEEE Transactions on Cognitive Communications and Networking"
